--- a/estilos/style.css
+++ b/estilos/style.css
@@ -32,4 +32,16 @@ main{
     background: url('../fundos/frame-iphone.png');
 }
 
-#redes-sociais
+iframe#tela{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 267px;
+    height: 471px;
+}
+
+#redes-sociais{
+     
+}
+
+
